syntax = "proto3";

package auth;

option go_package = "./pkg/auth/pb/";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse){}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc jwtValidate (JwtRequest) returns (jwtResponse){}
}

message RegisterRequest{
    string email = 1;
    string password = 2;
}

message RegisterResponse{
    string email = 4;
    string jwt = 3;
    string userID = 5;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    RegisterResponse login = 1;
}

message JwtRequest{
    string jwt=1;
}

message jwtResponse{
    string userID = 1;
}